--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ CopyEdit
   <title>HNG13 DevOps Stage 0</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Ubuntu, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -30,9 +30,9 @@ CopyEdit
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to DevOps Stage 0 - John Doe/@johndoe</h1>
+    <h1>Welcome to DevOps Stage 0 - Samuel Gbadebo / @CloudMaestro</h1>
     <p>Successfully deployed on AWS</p>
-    <p class="timestamp">Deployed: 08/09/2025</p>
+    <p class="timestamp">Deployed: 17/10/2025</p>
   </div>
 </body>
 </html>
