--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-html
-CopyEdit
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +6,7 @@ CopyEdit
   <title>HNG13 DevOps Stage 0</title>
   <style>
     body {
-      font-family: Ubuntu, sans-serif;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -31,7 +29,7 @@ CopyEdit
 <body>
   <div class="container">
     <h1>Welcome to DevOps Stage 0 - Samuel Gbadebo / @CloudMaestro</h1>
-    <p>Successfully deployed on AWS</p>
+    <p>Successfully deployed on AWS EC2 Instance</p>
     <p class="timestamp">Deployed: 17/10/2025</p>
   </div>
 </body>
